--- a/index.css
+++ b/index.css
@@ -631,3 +631,12 @@ line-height: 30px;
   width: 23px;
   height: 23px;
 }
+
+
+
+
+a{
+  text-decoration: none;
+   font-size: 14px;
+   margin-left: 10px;
+}
